# FunctionalC

./: .clang-format  .editorconfig  .gitignore  .prettierrc.yml  README.md  outfile  plan.txt  run_benchmarks.ps1  test.c  test_manual.s
benchmarks/: Makefile  edu_complex_benchmark.c  edu_complex_benchmark.ts  edu_complex_benchmark_manual.c  edu_complex_benchmark_planner.c  edu_complex_data.py  edu_complex_planner.spec  edu_complex_planner_generated.c  edu_complex_planner_helpers.h  generate_edu_complex_data.py  map_filter_reduce.c  map_filter_reduce.js  package-lock.json  package.json  run_edu_complex_benchmark.py
core/: Makefile
core/planner/: astgen.c  astgen.h  c_codegen.c  c_codegen.h  c_model.c  c_model.h  c_render.c  c_render.h  common.h  compiled_segment.c  compiled_segment.h  diagnostics.c  diagnostics.h  function_registry.c  function_registry.h  graph_opt.c  graph_opt.h  loop_ir.h  lower.c  lower.h  main.c  pipeline_ir.h  pipeline_plan.h  planner_ir.c  planner_ir.h  simplify.c  simplify.h  string_builder.c  string_builder.h  transpiler.c  transpiler.h
core/src/: benchmark.c  benchmark.optimized.c  list.c  list.h  observable.c  observable.h  observable_nofix.c  profiler.c  profiler.h  stopwatch.c  task.c  task.h  test.c
core/testdata/: benchmark.dsl  benchmark_filter.dsl  benchmark_take.dsl  (+8 more)
docs/: INTEGRATION.md  MVP.md
src/: list.c  list.h  observable.c  observable.h  stopwatch.c  stopwatch.h  task.c  task.h  test.c
tests/: conftest.py  models.py  pyproject.toml
tests/bench/: benchmark_matrix.py  test_benchmark_matrix.py  test_map_filter_reduce.py
(+34 files in other folders)
